--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>WakaTime Discord Ranking</title>
   </head>
   <body>
+    <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
